# cachebox3.0_native

./: CMakeLists.txt  main.cpp
Tests/: Cache_Test.cpp  Coordinate_Test.cpp  EXPERIMENT.cpp  MathUtils_Test.cpp  String16_Test.cpp  Type_Test.cpp  Waypoint_Test.cpp
Tests/TestResources/: .gitignore  ArrayTest.json  JsonArrayTest.json  TestFileUtf8.txt  TestFileUtf8_2.txt
Tests/TestResources/TestDir/: WriteTestFile.txt  logTest.txt
Tests/TestResources/TestDir/Sqlite/testResources2/: createTest5.db3
Tests/logger/: Logger_Test.cpp
Tests/utils/: Array_Test.cpp  Atomic_Test.cpp  FileHandle_Test.cpp  FileReader_Test.cpp  JsonStreamParser_Test.cpp  Object_Test.cpp  PointerMap_Test.cpp  StopWatch.h  System_Test.cpp
Tests/utils/exception/: StringException_Test.cpp
Tests/utils/sqlite/: SqliteValue_Test.cpp  Sqlite_Test.cpp
lib/googletest-master/googlemock/: CHANGES
lib/googletest-master/googlemock/docs/: CheatSheet.md  CookBook.md
lib/googletest-master/googlemock/include/gmock/: gmock-generated-actions.h.pump  gmock-generated-function-mockers.h.pump  gmock-generated-matchers.h.pump
lib/googletest-master/googlemock/include/gmock/internal/: gmock-generated-internal-utils.h.pump
lib/googletest-master/googletest/: CHANGES  README.md
lib/googletest-master/googletest/codegear/: gtest.cbproj  gtest_main.cbproj  gtest_unittest.cbproj
lib/googletest-master/googletest/docs/: AdvancedGuide.md  FAQ.md
lib/googletest-master/googletest/include/gtest/: gtest-param-test.h.pump
lib/googletest-master/googletest/include/gtest/internal/: gtest-param-util-generated.h.pump  gtest-tuple.h.pump  gtest-type-util.h.pump
lib/googletest-master/googletest/m4/: acx_pthread.m4
src/: Cache.h  Coordinate.h  MathUtils.h  Type.h  Waypoint.h
src/logger/: C__Logger.h  EmptyLogger.h  JNI_Logger.h  Logger.h  LoggerFactory.h
src/utils/: AbstractStreamParser.h  Array.h  AtomicBoolean.h  AtomicInteger.h  FileHandle.h  FileReader.h  JsonStreamParser.h  Object.h  PointerMap.h  Reader.h  String16.h  StringObject.h  System.h
src/utils/exceptions/: ArithmeticException.h  IllegalStateException.h  IndexOutOfBoundsException.h  NumberFormatException.h  StringException.h
src/utils/sqlite/: Sqlite.h  SqliteCursor.h  SqliteException.h  SqlitePreparedStatement.h  SqliteResult.h  SqliteValue.h
